src/public/css/main.css
/* ... */
h1, h2, h3, h4, h5, h6 {
  margin-bottom: .8rem;
  font-weight: 200;
  color: #444;
  line-height: 1.25;
  margin: 0 0 24px
  text-rendering: optimizeLegibility;
}


h1 {
	font-size: 1.8rem;

}

h1.journal-title {
  color: #D0181F;
  margin-top: 0;
  font-weight: 300;
  text-transform: lowercase;
  margin-bottom: .5rem;
}

h2.tagline {
  color: #939598;
  font-weight: 100;
  font-size: 3rem;
  line-height: 2.6rem;
  margin-bottom: 3rem;
  margin-top:.4rem;
}


h2 {
	margin-top: 1.4rem;
	font-size: 1.2rem;
}

h3 {
	font-size: 1.1rem;
}

h4, h5 {
  font-size: 1rem;
}

h3 {
  margin-top: 1.5rem;

}

h4, h5, h6 {
  margin-top: 1rem;
}

div.project h2 {
  margin-top: 2rem;
  font-size: 1.6rem;
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

@media (max-width: 42em) {
  .content p, .content ul {
    font-size: 1rem;
  }
}


strong {
  color: #303030;
}

/* Footer */
div.footer-menu {
    margin: auto;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
}

ul#footer-menu {
  list-style-type: none;
}

ul#footer-menu li {
  display: inline-block;
  padding-right: .4rem;
  text-transform: uppercase;
  font-size: 0.6rem;
}

a.footer-menu-item {
    color: #939598;
}

a.footer-menu-item-active {
    color: #D0181F;
}

@media (max-width: 46em) {
  ul#footer-menu li {
  padding-right: .2rem;
  font-size: 0.5rem;
}

}

/* Table of contents */

.toc-title {
	font-size: 1.2rem;
	font-weight: 200;
}
.toc-issue {
	margin-bottom: 1.4rem;
}

.toc-issue p {
	line-height: 1.2rem ;
}

.alt-link {
  color: #939598;
}

/* Lists */
ul {
	list-style: circle;
}

ul, ol, dl {
  margin-top: 0;
  margin-bottom: 1rem;
}

dt {
  font-weight: bold;
}
dd {
  margin-bottom: .5rem;
}

/* Misc */

hr {
  margin-top: 60px;
  position: relative;
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
}

abbr {
  font-size: 85%;
  font-weight: bold;
  color: #555;
  text-transform: uppercase;
}
abbr[title] {
  cursor: help;
  border-bottom: 1px dotted #e5e5e5;
}

/* Search Highlihting */

mark {
    color: white;
    background-color: #841212;
}

/* Quotes */

blockquote {
	padding: 0rem 1.5rem 0rem 2rem;
	margin: 0 0 20px 0; 
  	color: #454545;
	border-left: none;
	font-style: italic;
}

blockquote p:last-child {
  margin-bottom: 0;
}

@media (min-width: 30em) {
  blockquote {
    padding-right: 5rem;
    padding-left: 1.25rem;
  }
}

/* Buttons */

p.spaced {
  margin: 2rem;
}

a.button {
  background-color: #D0181F;
  color: white; 
  padding: .6rem 1rem;
  border-radius: 5px;
  transition-duration: 0.4s;
  cursor: pointer;
  text-decoration: none;

}

a.button:hover {
  background-color: #FB6D74;
  color: white;
}

/* Images */

p:has(img) {
  width: 100%;
}

img {
  display: block;
  max-width: 100%;
  margin: 1.4rem 0 1rem;
  border-radius: 5px;
}

img.project-image {
  width: 100%;
  margin-bottom: 1rem;
}

img.project-image-toc {
  width: 50%;
}


figure {
  display: block;
  overflow: hidden;
  margin: 1.5rem 0 2rem;
}

figure img {
  display: block;
  width: 100%;
  height: auto;
}

span.caption, figcaption {
  color: #939598;
  margin-top: .4rem;
  font-size: .5rem;
  text-align: right;
  padding-left: 20%;
  line-height: .8rem;
  width: 100%;
  display: block;
}







/* Tables */
table {
  table-layout: auto;
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid #e5e5e5;
  border-collapse: collapse;
  border-spacing: 0;
  display: block;
  overflow-x:auto;
  margin-top: 2rem;
}


td,
th {
  padding: .25rem .5rem;
  border: 1px solid #e5e5e5;
  border-top: 1px solid #ddd;
  padding: 4px 8px;
}
tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: #f9f9f9;
}

/*
 * Custom type
 *
 * Extend paragraphs with `.lead` for larger introductory text.
 */

.lead {
  font-size: 1.25rem;
  font-weight: 300;
}


/*
 * Messages
 *
 * Show alert messages to users. You may add it to single elements like a `<p>`,
 * or to a parent if there are multiple elements to show.
 */

.message {
  margin-bottom: 1rem;
  padding: 1rem;
  color: #717171;
  background-color: #f9f9f9;
}

/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
 */

a#logo {
	display: inline-block;
	margin-left: 3rem;
  margin-top: .2rem;
	margin-bottom: -.33rem;
}

a#logo > img {
	margin: 0;
}


.masthead {
  margin-bottom: 2rem;
  text-align: left;
  padding-top: .8rem;
}

a.search-icon {
  position: absolute;
  top: 1rem;
  left: 4.5rem; /* default (non-reverse): sits right of hamburger at left: 2rem */
  display: flex;
  align-items: center;
  padding: .4rem .4rem .2rem .4rem;
  color: #505050;
  background-color: #fff;
  border-radius: .5rem;
  opacity: 0.85;
  line-height: 1;
}

a.search-icon:hover {
  opacity: 1;
}

.layout-reverse a.search-icon {
  left: auto;
  right: 3.4rem; /* sits to the left of hamburger */
}

@media (min-width: 30.1em) {
  .layout-reverse a.search-icon {
    right: 3.4rem;
  }
}

/* Search page */
.search-wrap {
  max-width: 40rem;
}

#search-input {
  width: 100%;
  font-size: 1.1rem;
  padding: .5rem .75rem;
  border: 1px solid #ccc;
  border-radius: 3px;
  margin-bottom: .5rem;
}

.search-status {
  font-size: .85rem;
  color: #888;
  margin: .25rem 0 1rem;
}

.search-result {
  border-top: 1px solid #eee;
  padding: 1rem 0;
}

.search-result-title {
  font-size: 1rem;
  margin: 0 0 .25rem;
}

.search-result-title a {
  color: #222;
}

.search-result-meta {
  font-size: .8rem;
  color: #888;
  margin: .15rem 0;
}

.search-result-excerpt {
  font-size: .85rem;
  color: #555;
  margin: .4rem 0 0;
}

.search-result-excerpt mark {
  background: #fff3b0;
  padding: 0 1px;
}



ul#main-nav, ul#main-nav-small {
  list-style-type: none;
  display: inline-block;
  margin: 0;
  margin-top: 10px;
  padding: 0;
  padding-right: 1rem;
  font-size: .5rem;
	font-weight: 400;
	text-transform: uppercase; 
}

ul#main-nav {
    margin-left: 10px;
}

ul#main-nav-small {
  display: none;
  margin-left: 0px;
}
/* ... */

